# Gen_for_SmallBusiness

./: .env.example  .env.example.app  .env.example.worker  .excalidraw  .gitignore  BREWGRAM_WORKER.md  CLAUDE.md  Onboarding.md  README.md  VM_RESTART.md  VM_WORKER.md  app.py  mobile_app.py  pyproject.toml  report.md  report_ver2.md  requirements.txt  team_onboarding_guide.md  worker_api.py
.claude/: hash.txt
.serena/: project.yml
backends/: hf_hybrid.py  hf_img2img.py  hf_inference_api.py  hf_ip_adapter.py  hf_sd15.py  image_base.py  insta_capture.py  mock_image.py  mock_text.py  openai_gpt.py  openai_image.py  registry.py  remote_worker.py  text_base.py
compass/: checklist.md  context.md  plan.md
config/: __init__.py  database.py  runtime_paths.py  settings.py
crawl_and_analyze/: image_analyzer.py  image_crawler.py
docs/: BREWGRAM_WORKER.md  PRD.md  architecture.md  brewgram_presentation_script_v1.md  brewgram_service_pitch_v1.html  design.md  generation.md  infra_stack_study.md  instagram_oauth_implementation_plan.md  instagram_oauth_won_integration_notes.md  instagram_team_onboarding_guide.md  mobile_worker_workflow.md  onboarding.md  prompt_flow.html  schema.md  schema_future.md  schema_migration.md  stack.md
infra/: README.md
logo_gen_exp/: README.md  app_logo_lab.py  generator.py  openai_client.py  pil_plus_ai.py  pil_renderer.py  prompts.py
models/: __init__.py  base.py  brand.py  brand_image.py  generated_upload.py  generation.py  generation_output.py  history.py  hybrid.py  img2img.py  instagram_connection.py  ip_adapter.py  local_backend.py  product.py  reference_image.py  sd15.py
schemas/: __init__.py  brand_schema.py  history_schema.py  image_schema.py  instagram_schema.py  product_schema.py  text_schema.py
scripts/: insta_screenshot.py  instagram_capture_worker.py
services/: __init__.py  analysis_service.py  background_swap_service.py  brand_image_service.py  brand_service.py  caption_service.py  generation_service.py  history_service.py  image_service.py  instagram_auth_adapter.py  instagram_auth_service.py  instagram_service.py  logo_service.py  onboarding_service.py  product_service.py  reference_service.py  text_service.py  upload_service.py
stitch/: archive.html  index.html  manifest.webmanifest  offline.html  settings.html  (+6 more)
(+80 files in other folders)
