[project]
name = "gen-for-smallbusiness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19",
    "greenlet>=3.0.0",
    "httpx>=0.25",
    "instaloader>=4.15.1",
    "openai>=1.40",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "streamlit>=1.30",
]
