[project]
name = "gen-for-smallbusiness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiosqlite>=0.19",
    "greenlet>=3.0.0",
    "httpx>=0.25",
    "instaloader>=4.15.1",
    "openai>=1.40",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "streamlit>=1.30",
    # ── Local Model (optional, for USE_LOCAL_MODEL=true) ──
    "torch>=2.1.0",
    "diffusers==0.31.0",
    "transformers>=4.44.0,<5.0.0",
    "accelerate>=0.24.0",
    "torchvision>=0.26.0",
]
